objects/PDF_Element__c/PDF_Element__c.object-meta.xml
<CustomObject>
    <description>Element added to a PDF instance.</description>
    <label>PDF Element</label>
    <nameField>
        <label>PDF Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>