objects/PDF_Element__c/fields/PDF__c.field-meta.xml
<CustomField>
    <fullName>PDF__c</fullName>
    <label>PDF</label>
    <referenceTo>PDF__c</referenceTo>
    <relationshipLabel>PDF Elements</relationshipLabel>
    <relationshipName>PDF_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>