objects/PDF_Element__c/fields/Ref_PDF_Element__c.field-meta.xml
<CustomField>
    <fullName>Ref_PDF_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref PDF Element</label>
    <referenceTo>Ref_PDF_Element__c</referenceTo>
    <relationshipLabel>PDF Elements</relationshipLabel>
    <relationshipName>PDF_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>